LayoutTests/resources/basic-gestures.js
@@ -22,6 +22,18 @@ function doubleTapToZoomAtPoint(x, y)
     });
 }
 
+function doubleTapAtPoint(x, y)
+{
+    return new Promise(resolve => {
+        testRunner.runUIScript(`
+            (function() {
+                uiController.doubleTapAtPoint(${x}, ${y}, function() {
+                    uiController.uiScriptComplete();
+                });
+            })();`, resolve);
+    });
+}
+
 function longPressAtPoint(x, y)
 {
     return new Promise(resolve => {
